# petaserver

./: .gitignore  README.md  UsageGuide.md  config.example.toml  example-env  install-client.sh  install-server.sh  pyproject.toml
petabytestorage/: __main__.py  api_models.py  bot.py  config.py  consts.py  globals.py  middleware.py  models.py
petabytestorage/utils/: __init__.py  crypto.py  crypto.py-v1
