[project]
name = "filedrench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "tortoise-orm==0.25.1",
    "aiosqlite==0.19.0",
    "discord-py==2.3.2",
    "zstandard==0.22.0",
    "cryptography==42.0.8",
    "bcrypt==4.1.3",
    "python-dotenv==1.0.1",
    "toml==0.10.2",
    "httpx>=0.27.0",
    "aioftp==0.21.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
]

[tool.basedpyright]
typeCheckingMode = "standard"
